--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-purple">
       <div class="container">
-        <a class="navbar-brand text-white" href="/index.html">PAM Consulting</a>
+        <a class="navbar-brand text-white" href="index.html">PAM Consulting</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-              <a class="nav-link text-white" href="/index.html">Home</a>
+              <a class="nav-link text-white" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="/about.html">About Us</a>
+              <a class="nav-link text-white" href="about.html">About Us</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle text-white" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
@@ -41,7 +41,7 @@
               <a class="nav-link text-white" href="#">Contact Us</a>
             </li>
           </ul>
-          <a class="btn btn-warning" href="/auth.html">Login & Registration</a>
+          <a class="btn btn-warning" href="auth.html">Login & Registration</a>
         </div>
       </div>
     </nav>
